# gmx_hole

./: .gitignore  CMakeLists.txt  README.md  README.rst  gmx_holeConfig.cmake.in  gmx_holeConfigVersion.cmake.in
rad/: downscaled.rad  simple.rad
src/: CMakeLists.txt  ExtractData.c  ExtractData.h  gmx_hole.c
src/GMX2016/: gmx_hole.cpp
src/GMX2018/: gmx_hole.cpp
src/GMX46/: gmx_hole.c
src/GMX50/: gmx_hole.c
src/GMX51/: gmx_hole.c
